--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "transaction-service",
-  "version": "1.0.0",
-  "main": "index.js",
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "scripts": {
-    "start": "node index.js"
+    "express": "^4.18.2",
+    "axios": "^1.3.0",
+    "dotenv": "^16.0.3",
+    "oauth-1.0a": "^2.2.6",
+    "crypto": "^1.0.1"
   }
 }
 
