--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 OPENBANKING_CONSUMER_KEY=oum50d0hwmz1qhl5kmqh4ng10yfcavxm3tbudjk4
 OPENBANKING_CONSUMER_SECRET=imvperxlslo4paydhlb053olkct5zuga1prrfpjk
-OPENBANKING_OAUTH_URL=http://63.32.207.78
+OPENBANKING_OAUTH_URL=https://apisandbox.openbankproject.com
 PORT=80
 
