--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-OPENBANKING_CONSUMER_KEY=oum50d0hwmz1qhl5kmqh4ng10yfcavxm3tbudjk4
-OPENBANKING_CONSUMER_SECRET=imvperxlslo4paydhlb053olkct5zuga1prrfpjk
+OPENBANKING_CONSUMER_KEY=vlnq5giguuo2p13mgkln2t32efeq1ghkitcqz3r3
+OPENBANKING_CONSUMER_SECRET=sznihivdwethejwdtdvjwckkabssyiyfn5hizsan
 OPENBANKING_OAUTH_URL=https://apisandbox.openbankproject.com
-PORT=80
+REDIRECT_URI=https://curl-6yum.onrender.com/callback
 
