--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 OPENBANKING_CONSUMER_KEY=vlnq5giguuo2p13mgkln2t32efeq1ghkitcqz3r3
 OPENBANKING_CONSUMER_SECRET=sznihivdwethejwdtdvjwckkabssyiyfn5hizsan
 OPENBANKING_OAUTH_URL=https://apisandbox.openbankproject.com
-PORT=80
+REDIRECT_URI=https://curl-6yum.onrender.com/callback
+PORT=10000
+
